<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.first.FirstActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_sample"
            android:layout_width="wrap_content"
            android:layout_height="256dp"
            tools:src="@tools:sample/backgrounds/scenic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/name"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/iv_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/palindrome"
            android:layout_marginTop="8dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/ti_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_palindrome"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:alpha="0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/ti_palindrome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:alpha="0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>